# iTest_httpapi_v2

./: README.md  pyproject.toml
api/: __init__.py  api_4_3rd.py  cc_api.py  core_api.py
httpapi/: __init__.py  api_4_3rd.py  api_log.py  client.py  config.yml  core.py  core_api.py  exceptions.py  httpapi.py  loader.py  log.py  model.py  parse.py  parser.py  response.py  testcases.py  utils.py
tests/: __init__.py  context.py  test_api.py  test_core.py  test_model.py  test_parser.py  test_response.py
testsuits/: __init__.py  basic_1_test.py  config.yml  demo.json  funplus_test.py  interface_encode_test.py  login_test.py  test_api.py
