[tool.poetry]
name = "itest_httpapi_v2"
version = "0.1.0"
description = "api testing framework"
authors = ["genejiang2012 <genejiang2012@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.1.2"
requests = "^2.25.0"
pytest-html = "^3.0.0"
loguru = "^0.5.3"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
PyYAML = "^5.3.1"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
